TS-1487: Ordering fix, init plugins before cache.